.metadata/.plugins/org.eclipse.cdt.ui/Abgabe 2.build.log
14:46:58 **** Incremental Build of configuration Debug for project Abgabe 2 ****
make all 
Building file: ../DistPoly.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"DistPoly.d" -MT"DistPoly.o" -o "DistPoly.o" "../DistPoly.cpp"
In file included from ../DistPoly.cpp:1:
../DistPoly.h:40:23: error: expected ‘)’ before ‘;’ token
   40 |         DistPoly(int n; string* newVarNames)
      |                 ~     ^
      |                       )
../DistPoly.h:40:33: error: expected ‘;’ at end of member declaration
   40 |         DistPoly(int n; string* newVarNames)
      |                                 ^~~~~~~~~~~
      |                                            ;
../DistPoly.h:40:44: error: expected unqualified-id before ‘)’ token
   40 |         DistPoly(int n; string* newVarNames)
      |                                            ^
../DistPoly.cpp:90:21: error: definition of implicitly-declared ‘DistPoly::~DistPoly()’
   90 | DistPoly::~DistPoly() {
      |                     ^
make: *** [subdir.mk:23: DistPoly.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

14:46:59 Build Failed. 5 errors, 0 warnings. (took 323ms)

